...
                                    <constraint firstAttribute="trailing" secondItem="oB8-lW-hNA" secondAttribute="trailing" id="pTm-wR-Ig6"/>
                                </constraints>
                            </view>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1b2-A6-LE8">
                                <rect key="frame" x="0.0" y="813" width="414" height="49"/>
                                <items>
                                    <barButtonItem title="Add" image="plus" catalog="system" style="plain" id="XzI-NL-cQa" userLabel="Add">
                                        <connections>
                                            <segue destination="dJZ-NQ-wiO" kind="show" identifier="AddTransactionTemplateFormSegue" id="UQi-zy-E5x"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="sh1-BL-R0l"/>
                                    <barButtonItem title="Sort" image="arrow.up.arrow.down" catalog="system" style="plain" id="Kbk-41-DGf" userLabel="Sort"/>
...
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="g3E-Ix-yvl">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="36"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="ORp-rs-rmv">
                                                        <rect key="frame" x="0.0" y="0.0" width="328" height="36"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="amountInputField"/>
                                                        <color key="textColor" systemColor="systemGreenColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="decimalPad" returnKeyType="next" enablesReturnKeyAutomatically="YES" smartDashesType="yes"/>
                                                    </textField>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ajd-Lx-Q5B">
                                                        <rect key="frame" x="336" y="0.0" width="38" height="36"/>
...
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
                                            <textField opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rjT-61-Pmg">
                                                <rect key="frame" x="0.0" y="44" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="textInputField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
                                            </textField>
                                            <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4Ck-MP-ayd">
                                                <rect key="frame" x="0.0" y="86" width="374" height="31"/>
                                                <subviews>
...
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="11k-Zz-B4w">
                                                        <rect key="frame" x="325" y="0.0" width="51" height="31"/>
                                                        <accessibility key="accessibilityConfiguration" label="recurringSwitch"/>
                                                    </switch>
                                                </subviews>
                                            </stackView>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="g3E-Ix-yvl" firstAttribute="leading" secondItem="ykQ-wZ-AOX" secondAttribute="leading" id="62L-qP-kD0"/>
                                            <constraint firstItem="g3E-Ix-yvl" firstAttribute="top" secondItem="ykQ-wZ-AOX" secondAttribute="top" id="7CA-LQ-sm8"/>
                                            <constraint firstAttribute="trailing" secondItem="g3E-Ix-yvl" secondAttribute="trailing" id="LOM-Ku-sJZ"/>
                                        </constraints>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZc-4y-fQ6">
                                        <rect key="frame" x="20" y="145" width="374" height="36"/>
                                        <accessibility key="accessibilityConfiguration" identifier="submitButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="Submit"/>
                                        <connections>
                                            <action selector="saveButtonPressed:" destination="dJZ-NQ-wiO" eventType="touchUpInside" id="ma3-af-iuw"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
