...
                                            <barButtonItem systemItem="add" id="g9P-G5-iWy">
                                                <connections>
                                                    <action selector="addTransaction:" destination="ldu-oQ-Xxf" id="HFu-H3-9K5"/>
                                                </connections>
                                            </barButtonItem>
                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="2zf-jU-6kR"/>
                                            <barButtonItem image="line.horizontal.3" catalog="system" style="plain" id="YPi-FL-MVe" userLabel="Menu"/>
                                        </items>
                                    </toolbar>
                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="p47-nM-Nw2">
                                        <rect key="frame" x="0.0" y="80" width="414" height="650"/>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <prototypes>
...
